[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "groq>=0.11.0",
    "google-generativeai>=0.8.3",
    "together>=1.3.2",
    "supabase>=2.9.0",
    "google-cloud-texttospeech>=2.18.0",
    "gtts>=2.5.3",
    "eventlet>=0.37.0",
    "flask-socketio>=5.4.1",
    "python-socketio>=5.11.4",
    "python-engineio>=4.10.1",
    "requests>=2.32.3",
    "hume>=0.4.0",
    "aioflask>=0.4.0",
    "hypercorn>=0.17.3",
    "quart>=0.19.6",
    "quart-schema>=0.20.0",
]
